src/optimpack.h


typedef enum {
#define _OPK_STATUS(a,b,c) b = a,
  _OPK_STATUS_LIST
#undef _OPK_STATUS
  OPK_MAX_STATUS
} opk_status_t;
typedef ptrdiff_t opk_index_t;
typedef struct _opk_object opk_object_t;
extern opk_object_t*
opk_hold_object(opk_object_t* obj);
extern void
opk_drop_object(opk_object_t* obj);
extern opk_index_t
opk_get_object_references(opk_object_t* obj);
typedef struct _opk_vector opk_vector_t;
typedef struct _opk_vspace opk_vspace_t;
extern opk_vspace_t*
opk_new_simple_double_vector_space(opk_index_t size);
extern opk_vector_t*
opk_wrap_simple_double_vector(opk_vspace_t* vspace, double data[],
                              void (*free_client_data)(void*),
                              void* client_data);
extern int
opk_rewrap_simple_double_vector(opk_vector_t* vect, double new_data[],
                                void (*new_free_client_data)(void*),
                                void* new_client_data);
extern opk_vspace_t*
opk_new_simple_float_vector_space(opk_index_t size);
extern opk_vector_t*
opk_wrap_simple_float_vector(opk_vspace_t* vspace, float data[],
                             void (*free_client_data)(void*),
                             void* client_data);
extern int
opk_rewrap_simple_float_vector(opk_vector_t* v, float new_data[],
                               void (*new_free_client_data)(void*),
                               void* new_client_data);
extern opk_vector_t*
opk_vcreate(opk_vspace_t* vspace);
extern void
opk_vzero(opk_vector_t* vect);
extern void
opk_vfill(opk_vector_t* vect, double alpha);
extern void
opk_vcopy(opk_vector_t* dst, const opk_vector_t* src);
extern void
opk_vscale(opk_vector_t* dst,
           double alpha, const opk_vector_t* src);
extern void
opk_vswap(opk_vector_t* x, opk_vector_t* y);
extern double
opk_vdot(const opk_vector_t* x, const opk_vector_t* y);
extern double
opk_vnorm2(const opk_vector_t* v);
extern double
opk_vnorm1(const opk_vector_t* v);
extern double
opk_vnorminf(const opk_vector_t* v);
extern void
opk_vaxpby(opk_vector_t* dst,
           double alpha, const opk_vector_t* x,
           double beta,  const opk_vector_t* y);
extern void
opk_vaxpbypcz(opk_vector_t* dst,
              double alpha, const opk_vector_t* x,
              double beta,  const opk_vector_t* y,
              double gamma, const opk_vector_t* z);
typedef struct _opk_operator opk_operator_t;
extern opk_status_t
opk_apply_direct(opk_operator_t* op, opk_vector_t* dst,
                 const opk_vector_t* src);
extern opk_status_t
opk_apply_adjoint(opk_operator_t* op, opk_vector_t* dst,
                  const opk_vector_t* src);
extern opk_status_t
opk_apply_inverse(opk_operator_t* op, opk_vector_t* dst,
                  const opk_vector_t* src);
typedef void opk_error_handler(const char* message);
extern opk_error_handler*
opk_set_error_handler(opk_error_handler* handler);
extern void
opk_error(const char* reason);
typedef struct _opk_lnsrch opk_lnsrch_t;
extern opk_lnsrch_t*
opk_lnsrch_new_csrch(double ftol, double gtol, double xtol);
extern opk_lnsrch_t*
opk_lnsrch_new_backtrack(double ftol);
extern opk_lnsrch_t*
opk_lnsrch_new_nonmonotone(opk_index_t m, double ftol,
                           double sigma1, double sigma2);